--- a/assessments/clontz/midterm-v1.tex
+++ b/assessments/clontz/midterm-v1.tex
@@ -2,7 +2,7 @@
 %% This is file, `midterm-v1.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/10/06,13:50
+%% Generated on :  2017/10/02,14:54
 %% From source  :  midterm-v1_solutions.tex
 %% Using options:  active,generate=midterm-v1,extract-env={problem}
 %% 
@@ -15,43 +15,43 @@
 \begin{document}
 
 \begin{problem}{E1}
-Write a system of linear equations corresponding to the following
-augmented matrix.
-\[
-\begin{bmatrix}[ccc|c]
--4 & -1 & 3 & 2  \\
-1 & 2 & -1 & 0 \\
--1 & 4 & 1 & 4
-\end{bmatrix}
-\]
+Write an augmented matrix corresponding to the following system of linear equations.
+\begin{align*}
+x_1+4x_3 &= 1 \\
+x_2-x_3 &= 7 \\
+x_1-x_2+3x_3 &= -1
+\end{align*}
 \end{problem}
 
 \begin{problem}{E2}
-Put the following matrix in reduced row echelon form.
-$$\begin{bmatrix}
- 3 & -1 & 0 \\
- -1 & 0 & -1 \\
- -1 & 1 & 2 \\
- 0 & 2 & 6
-\end{bmatrix}$$
+Find \(\RREF A\), where
+\[
+  A =
+  \begin{bmatrix}[cccc|c]
+    3 & -2 & 1 & 8 & -5 \\
+    2 & 2 & 0 & 6 & -2 \\
+    -1 & 1 & 1 & -4 & 6 \\
+  \end{bmatrix}
+\]
 \end{problem}
 \newpage
 
 \begin{problem}{E3}
-Solve the following linear system.
+Find the solution set for the following system of linear equations.
 \begin{align*}
-4x_1+4x_2+3x_3-6x_4 &= 5 \\
--2x_3-4x_4 &= 3 \\
-2x_1+2x_2+x_3-4x_4 &= -1 \\
+2x_1-2x_2+6x_3-x_4 &=-1 \\
+3x_1+6x_3+x_4 &= 5 \\
+-4x_1+x_2-9x_3+2x_4&=-7
 \end{align*}
 \end{problem}
 
 \begin{problem}{E4}
-Find a basis for the solution set to the homogeneous system of equations
-given by
+Find a basis for the solution set of the system of equations
 \begin{align*}
-3x+2y+z &= 0 \\
-x+y+z &= 0
+x+2y+3z+w &= 0 \\
+3x-y+z+w &= 0 \\
+2x-3y-2z &= 0 \\
+-x+2z+5w &=0
 \end{align*}
 \end{problem}
 \newpage
@@ -74,12 +74,11 @@ c \odot f &= c f^\prime
 
 \begin{problem}{V2}
   Determine if
-  \(\begin{bmatrix} 3 \\ -2 \\ 4 \end{bmatrix}\)
+  \(\begin{bmatrix} 4 \\ -1 \\ 6 \\ -7 \end{bmatrix}\)
   belongs to the span of the set
   \(\left\{
-    \begin{bmatrix} 1 \\ 2 \\ -3 \end{bmatrix},
-    \begin{bmatrix} 2 \\ 4 \\ -6 \end{bmatrix},
-    \begin{bmatrix} 0 \\ 0 \\ 0 \end{bmatrix}
+    \begin{bmatrix} 2 \\ 0 \\ -1 \\ 5 \end{bmatrix},
+    \begin{bmatrix} 4 \\ -1 \\ 4 \\ 3 \end{bmatrix}
     \right\}
   \).
 \end{problem}
@@ -97,21 +96,17 @@ Does
 \)?
 \end{problem}
 
-\begin{problem}{V4} Let $W$ be the set of all polynomials of even degree.  Determine if $W$ is a subspace of the vector space of all polynomials.
+\begin{problem}{V4}
+Determine if $\left\{ \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}\  \bigg|\ x,y,z \in \IR\right\}$  a subspace of $\IR^4$.
 \end{problem}
 \newpage
 
 \begin{problem}{S1}
-Determine if the set of polynomials $\left\{ -3x^3-8x^2, x^3+2x^2+2, -x^2+3\right\}$ is  linearly dependent or linearly independent
+Determine if the set of vectors $\left\{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\}$ is  linearly dependent or linearly independent
 \end{problem}
 
 \begin{problem}{S2}
-  Determine if the set \(\left\{
-    \begin{bmatrix} 3 \\ -1 \\ 2 \\3 \end{bmatrix},
-    \begin{bmatrix} 2 \\ 0 \\ 2 \\ 4\end{bmatrix},
-    \begin{bmatrix} 1 \\ -1 \\ 0 \\ -1\end{bmatrix},
-    \begin{bmatrix} -1 \\ 3 \\ 0 \\ 5\end{bmatrix}
-  \right\}\) is a basis of $\IR^4$.
+Determine if the set $\left\{\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}\right\}$ is a basis of $\IR^3$.
 \end{problem}
 \newpage
 
@@ -120,7 +115,7 @@ Let $W={\rm span}\left(\left\{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \
 \end{problem}
 
 \begin{problem}{S4}
-Let $W = {\rm span} \left( \left\{  \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\} \right)$.  Compute the dimension of $W$.
+Let $W={\rm span}\left( \left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 4 \\ -2 \end{bmatrix},  \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} \right\}\right)$.  Compute the dimension of $W$.
 \end{problem}
 
 \end{document}
