--- a/assessments/clontz/midterm-v2.tex
+++ b/assessments/clontz/midterm-v2.tex
@@ -2,7 +2,7 @@
 %% This is file, `midterm-v2.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/10/06,13:50
+%% Generated on :  2017/10/02,14:54
 %% From source  :  midterm-v2_solutions.tex
 %% Using options:  active,generate=midterm-v2,extract-env={problem}
 %% 
@@ -19,25 +19,30 @@ Write an augmented matrix corresponding to the following system of linear equati
 \begin{align*}
 x_1+4x_3 &= 1 \\
 x_2-x_3 &= 7 \\
-x_1-x_2+3x_4 &= -1
+x_1-x_2+3x_3 &= -1
 \end{align*}
 \end{problem}
 
 \begin{problem}{E2}
-Put the following matrix in reduced row echelon form.
-$$\begin{bmatrix}-3 & 5 & 2 & 0 \\ 1 & -1 & 0 & 2 \\ 1 & -2 & -1 & -1 \end{bmatrix}$$
+Find \(\RREF A\), where
+\[
+  A =
+  \begin{bmatrix}[ccc|c]
+    2 & -1 & 5 & 4 \\
+    -1 & 0 & -2 & -1 \\
+    1 & 3 & -1 & -5
+  \end{bmatrix}
+\]
 \end{problem}
 \newpage
 
 \begin{problem}{E3}
-Solve the system of equations
+Solve the following linear system.
 \begin{align*}
--3x +y &= 2\\
--8x+2y-z &= 6 \\
-2y+3z &= -2
+3x+2y+z &= 7 \\
+x+y+z &= 1 \\
+-2x+3z &= -11
 \end{align*}
-
-
 \end{problem}
 
 \begin{problem}{E4}
@@ -45,32 +50,42 @@ Find a basis for the solution set of the system of equations
 \begin{align*}
 x+2y+3z+w &= 0 \\
 3x-y+z+w &= 0 \\
-2x-3y-2z &= 0 \\
--x+2z+5w &=0
+2x-3y-2z &= 0
 \end{align*}
 \end{problem}
 \newpage
 
 \begin{problem}{V1}
-Let $V$ be the  set of all real numbers together with the operations $\oplus$ and $\odot$ defined by, for any $x,y \in V$ and $c \in \IR$,
+Let $V$ be the set of all polynomials with the operations, for any $f, g \in V$, $c \in \IR$,
 \begin{align*}
-x\oplus y  &= x+y-3 \\
-c \odot x &= cx-3(c-1)
+f \oplus g &= f^\prime + g^\prime \\
+c \odot f &= c f^\prime
 \end{align*}
+(here $f^\prime$ denotes the derivative of $f$).
 \begin{enumerate}[(a)]
-\item Show that \textbf{scalar multiplication} is
-      \textbf{associative}: \(a\odot(b\odot x)=(ab)\odot x\).
-\item Determine if $V$ is a vector space or not.  Justify your answer
+\item Show that scalar multiplication \textbf{distributes scalars} over
+      vector addition:
+      \(c\odot(f \oplus g)=
+      c\odot f \oplus c\odot g\).
+\item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
 
 \begin{problem}{V2}
-Determine if  $\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}$ can be written as a linear combination of the vectors $\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}$.
+Determine if $\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}$ is a linear combination of the vectors $\begin{bmatrix} 2 \\ 3 \\ -1 \end{bmatrix}$, $\begin{bmatrix} 1 \\ -1 \\ 0 \end{bmatrix}$, and $\begin{bmatrix} -3 \\ -2 \\ 5 \end{bmatrix}$.
 \end{problem}
 \newpage
 
 \begin{problem}{V3}
-Determine if the vectors  $\begin{bmatrix} 8 \\ 21 \\ -7 \end{bmatrix}$, $\begin{bmatrix} -3 \\ -8 \\ 3 \end{bmatrix}$, $\begin{bmatrix} -1 \\ -3 \\ 2 \end{bmatrix}$, and $\begin{bmatrix} 4 \\ 11 \\ -5 \end{bmatrix}$ span $\IR^3$.
+Does
+\(
+  \operatorname{span}\left\{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix},
+    \begin{bmatrix} -4 \\ 2 \\ -8 \end{bmatrix}
+  \right\} = \IR^3
+\)?
 \end{problem}
 
 \begin{problem}{V4} Let \(W\) be the set of all complex numbers \(a+bi\)
@@ -80,11 +95,16 @@ Determine if \(W\) is a subspace of \(\IC\).
 \newpage
 
 \begin{problem}{S1}
-Determine if the set of vectors $\left\{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\}$ is  linearly dependent or linearly independent
+Determine if the vectors $\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}$, $\begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix}$, and $\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}$ are linearly dependent or linearly independent
 \end{problem}
 
 \begin{problem}{S2}
-Determine if the set $\left\{\begin{bmatrix} 1 \\ 1 \\ -1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 1 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ -2 \end{bmatrix}\right\}$ is a basis of $\IR^3$.
+Determine if the set $\left\{
+\begin{bmatrix} 1 & -3 \\ 2 & 2 \end{bmatrix},
+\begin{bmatrix} -1 & 4 \\ -1 & 1 \end{bmatrix},
+\begin{bmatrix} -1 & 0 \\ 2 & 1 \end{bmatrix},
+\begin{bmatrix} 0 & 3 \\ 3 & 9 \end{bmatrix}
+\right\}$ is a basis of $M_{2,2}$ or not.
 \end{problem}
 \newpage
 
@@ -93,7 +113,7 @@ Let $W={\rm span}\left( \left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix}
 \end{problem}
 
 \begin{problem}{S4}
-Let $W = {\rm span} \left( \left\{ \begin{bmatrix} 1 \\ 1 \\ 2 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ 3 \\ 6 \\ 3 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 3 \\ -2 \end{bmatrix}, \begin{bmatrix} 7 \\ -1 \\ 8 \\ -3 \end{bmatrix} \right\} \right)$.  Find the dimension of $W$.
+Let $W$ be the subspace of $\P_3$ given by $W={\rm span}\left( \left\{ x^3-x^2+3x-3, 2x^3+x+1, 3x^3-x^2+4x-2, x^3+x^2+x-7\right\}\right)$.  Compute the dimension of $W$.
 \end{problem}
 
 \end{document}
