--- a/assessments/clontz/midterm-v3_solutions.tex
+++ b/assessments/clontz/midterm-v3_solutions.tex
@@ -10,8 +10,14 @@
 \begin{document}
 
 \begin{problem}{E1}
-Write a system of linear equations corresponding to the following
-augmented matrix.
+Write an augmented matrix corresponding to the following system of linear equations.
+\begin{align*}
+x_1+4x_3 &= 1 \\
+x_2-x_3 &= 7 \\
+x_1-x_2+3x_3 &= -1
+\end{align*}
+\end{problem}
+\begin{solution}
 \[
 \begin{bmatrix}[ccc|c]
 1 & 0 & 4 & 1 \\
@@ -19,95 +25,106 @@ augmented matrix.
 1 & -1 & 3 & -1
 \end{bmatrix}
 \]
-\end{problem}
-\begin{solution}
-\begin{align*}
-x_1+4x_3 &= 1 \\
-x_2-x_3 &= 7 \\
-x_1-x_2+3x_3 &= -1
-\end{align*}
 \end{solution}
+
 \begin{problem}{E2}
-Find \(\RREF A\), where
-\[
-  A =
-  \begin{bmatrix}[cc|c]
-    2 & -7 & 4 \\
-    1 & -3 & 2 \\
-    3 & 0 & 3
-  \end{bmatrix}
-\]
+Put the following matrix in reduced row echelon form.
+$$\begin{bmatrix}[ccc|c] -3 & 1 & 0 & 2 \\ -8 & 2 & -1 & 6 \\ 0 & 2 & 3 & -2 \end{bmatrix}$$
 \end{problem}
 \begin{solution}
-\[
-  \RREF A =
-  \begin{bmatrix}[cc|c]
-    1 & 0 & 0 \\
-    0 & 1 & 0 \\
-    0 & 0 & 1
-  \end{bmatrix}
-\]
+$$\begin{bmatrix}[ccc|c]
+-3 & 1 & 0 & 2 \\
+ -8 & 2 & -1 & 6 \\
+ 0 & 2 & 3 & -2
+\end{bmatrix} \sim
+\begin{bmatrix}[ccc|c]
+1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
+ -8 & 2 & -1 & 6 \\
+ 0 & 2 & 3 & -2
+\end{bmatrix} \sim
+\begin{bmatrix}[ccc|c]
+1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
+ 0 & -\frac{2}{3} & -1 & \frac{2}{3} \\
+ 0 & 2 & 3 & -2
+\end{bmatrix} $$
+$$\sim
+\begin{bmatrix}[ccc|c]
+1 & -\frac{1}{3} & 0 & -\frac{2}{3} \\
+ 0 & 1 & \frac{3}{2} & -1 \\
+ 0 & 2 & 3 & -2
+\end{bmatrix} \sim
+\begin{bmatrix}[ccc|c]
+1 & 0 & \frac{1}{2} & -1 \\
+ 0 & 1 & \frac{3}{2} & -1 \\
+ 0 & 0 & 0 & 0
+\end{bmatrix}$$
 \end{solution}
 
 \begin{extract}\newpage\end{extract}
 \begin{problem}{E3}
 Find the solution set for the following system of linear equations.
 \begin{align*}
-2x_1+3x_2-5x_3+14x_4 &= 8 \\
-x_1+x_2-x_3+5x_4&= 3
+2x_1-2x_2+6x_3-x_4 &=-1 \\
+3x_1+6x_3+x_4 &= 5 \\
+-4x_1+x_2-9x_3+2x_4&=-7
 \end{align*}
 \end{problem}
 \begin{solution}
 Let \(A =
   \begin{bmatrix}[cccc|c]
-    2 & 3 & -5 & 14 & 8 \\
-    1 & 1 & -1 & 5 & 3
+    2 & -2 & 6 & -1 & -1 \\
+    3 & 0 & 6 & 1 & 5 \\
+    -4 & 1 & -9 & 2 & -7
   \end{bmatrix}
 \), so \(\RREF A =
   \begin{bmatrix}[cccc|c]
-    1 & 0 & 2 & 1 & 1 \\
-    0 & 1 & -3 & 4 & 2 \\
+    1 & 0 & 2 & 0 & 2 \\
+    0 & 1 & -1 & 0 & 3 \\
+    0 & 0 & 0 & 1 & -1
   \end{bmatrix}
 \). It follows that the solution set is given by \(
   \begin{bmatrix}
-    1 - 2a - b \\
-    2 + 3a - 4b \\
+    2 - 2a \\
+    3 + a \\
     a \\
-    b
+    -1
   \end{bmatrix}
-\) for all real numbers \(a,b\).
+\) for all real numbers \(a\).
 \end{solution}
 
 \begin{problem}{E4}
 Find a basis for the solution set to the homogeneous system of equations
 \begin{align*}
-2x_1+3x_2-5x_3+14x_4 &= 0\\
-x_1+x_2-x_3+5x_4 &= 0
+4x_1+4x_2+3x_3-6x_4 &= 0 \\
+-2x_3-4x_4 &= 0 \\
+2x_1+2x_2+x_3-4x_4 &= 0 \\
 \end{align*}
 \end{problem}
 \begin{solution}
 Let \(A =
   \begin{bmatrix}[cccc|c]
-    2 & 3 & -5 & 14 & 0 \\
-    1 & 1 & -1 & 5 & 0
+    4 & 4 & 3 & -6 & 0 \\
+    0 & 0 & -2 & -4 & 0 \\
+    2 & 2 & 1 & -4 & 0
   \end{bmatrix}
 \), so \(\RREF A =
   \begin{bmatrix}[cccc|c]
-    1 & 0 & 2 & 1 & 1 \\
-    0 & 1 & -3 & 4 & 2 \\
+    1 & 1 & 0 & -3 & 0 \\
+    0 & 0 & 1 & 2 & 0 \\
+    0 & 0 & 0 & 0 & 0
   \end{bmatrix}
 \).
 It follows that the basis for the solution set is given by \(\left\{
   \begin{bmatrix}
-    - 2 \\
-    3 \\
+    -1 \\
     1 \\
+    0 \\
     0
   \end{bmatrix},
   \begin{bmatrix}
-    -1 \\
-    - 4 \\
+    3 \\
     0 \\
+    -2 \\
     1
   \end{bmatrix}
 \right\}\).
@@ -115,75 +132,98 @@ It follows that the basis for the solution set is given by \(\left\{
 
 \begin{extract}\newpage\end{extract}
 \begin{problem}{V1}
-Let $V$ be the set of all polynomials with the operations, for any $f, g \in V$, $c \in \IR$,
+Let $V$ be the set of all pairs of real numbers with the operations, for any $(x_1,y_1), (x_2,y_2) \in V$, $c \in \IR$,
 \begin{align*}
-f \oplus g &= f^\prime + g^\prime \\
-c \odot f &= c f^\prime
+(x_1,y_1) \oplus (x_2,y_2) &= (x_1+x_2,y_1+y_2) \\
+c \odot (x_1,y_1) &= (0, cy_1)
 \end{align*}
-(here $f^\prime$ denotes the derivative of $f$).
 \begin{enumerate}[(a)]
-\item Show that scalar multiplication \textbf{distributes scalars} over
-      vector addition:
-      \(c\odot(f \oplus g)=
-      c\odot f \oplus c\odot g\).
+\item Show that scalar multiplication
+      \textbf{distributes vectors} over scalar addition:
+      \((c+d)\odot(x,y)=
+      c\odot(x,y) \oplus d\odot(x,y)\).
 \item Determine if $V$ is a vector space or not.  Justify your answer.
 \end{enumerate}
 \end{problem}
 \begin{solution}
-Let $f,g \in \mathcal{P}$, and let $c \in \IR$.
-$$c \odot (f \oplus g) = c \odot (f^\prime+g^\prime) =
-c(f^\prime+g^\prime)^\prime = cf^{\prime\ \prime}+cg^{\prime\ \prime} =
-cf^\prime\oplus cg^\prime= c \odot f \oplus c \odot g.$$
-However, this is not a vector space, as there is no zero vector.  Additionally, $1 \odot f \neq f$ for any nonzero polynomial $f$.
+Let $(x_1,y_1) \in V$, and let $c,d \in \IR$.  Then
+$$(c+d)\odot (x_1,y_1)=(0, (c+d)y_1) = (0,cy_1) \oplus (0,dy_1) = c \odot (x_1,y_1) \oplus d \odot (x_1,y_1).$$
+However, $V$ is not a vector space, as $1 \odot (x_1,y_1) = (0,y_1) \neq (x_1,y_1)$.
 \end{solution}
 
 
-\begin{problem}{V2}
-Determine if  $\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}$ can be written as a linear combination of the vectors $\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}$.
+\begin{problem}{V2} Determine if $\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}$ is a linear combination of the vectors $\begin{bmatrix} 3 \\ 0 \\ -1 \end{bmatrix}$, $\begin{bmatrix} 1 \\ -1 \\ 4 \end{bmatrix}$, and $\begin{bmatrix} 5 \\ 1 \\  -6 \end{bmatrix}$.
 \end{problem}
 \begin{solution}
-$$\RREF\left(\begin{bmatrix}[cc|c] -1 & 1 & 0 \\ -9 & 5 & 0 \\ 15 & -5 & 2 \end{bmatrix} \right) = \begin{bmatrix}[cc|c] 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}$$
-Since this system has no solution, $\begin{bmatrix} 0 \\ 0 \\ 2 \end{bmatrix}$ cannot be written as a linear combination of the vectors $\begin{bmatrix} -1 \\ -9 \\ 15 \end{bmatrix}$ and $\begin{bmatrix} 1 \\ 5 \\ -5 \end{bmatrix}$.
-
+$$\RREF\left(\begin{bmatrix}[ccc|c] 3 & 1 & 5 & 1 \\ 0 & -1 & 1 & 4 \\ -1 & 4 & -6 & 3 \end{bmatrix} \right) = \begin{bmatrix}[ccc|c] 1 & 0 & 2 & 0 \\ 0 & 1 & -1 & 0 \\ 0 & 0 & 0 & 1 \end{bmatrix}$$
+So $\begin{bmatrix} 1 \\ 4 \\ 3 \end{bmatrix}$ is not a linear combination of the three vectors.
 \end{solution}
 
 
 \begin{extract}\newpage\end{extract}
 \begin{problem}{V3}
-Determine if the vectors  $\begin{bmatrix} -3 \\ 1 \\ 1 \end{bmatrix}$,$\begin{bmatrix} 5 \\ -1 \\ -2 \end{bmatrix}$,$\begin{bmatrix}2 \\ 0 \\ -1 \end{bmatrix}$, and $\begin{bmatrix} 0 \\ 2 \\ -1\end{bmatrix}$ span $\IR^3$
+Does
+\(
+  \operatorname{span}\left\{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 4 \\ -3 \end{bmatrix},
+    \begin{bmatrix} -4 \\ 2 \\ -8 \end{bmatrix}
+  \right\} = \IR^3
+\)?
 \end{problem}
 \begin{solution}
-$$\RREF\left(\begin{bmatrix}
--3 & 5 & 2 & 0 \\ 1 & -1 & 0 & 2 \\ 1 & -2 & -1 & -1 \end{bmatrix}\right)=\begin{bmatrix} 1 & 0 & 1 & 5 \\ 0 & 1 & 1 & 3 \\ 0 & 0 & 0 & 0\end{bmatrix}$$
-Since the resulting matrix has only two pivot columns, the vectors do not span $\IR^3$.
+Since
+\[
+  \RREF\begin{bmatrix}
+    2 & 3 & 1 & -4 \\
+    -1 & 12 & 4 & 2 \\
+    4 & -9 & -3 & -8
+  \end{bmatrix} =
+  \begin{bmatrix}
+    1 & 0 & 0 & -2 \\
+    0 & 1 & 1/3 & 0 \\
+    0 & 0 & 0 & 0
+  \end{bmatrix}
+\]
+has a zero row, the vectors fail to span \(\IR^3\).
 \end{solution}
 
-
-\begin{problem}{V4}
-Determine if $\left\{ \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}\  \bigg|\ x,y,z \in \IR\right\}$  a subspace of $\IR^4$.
+\begin{problem}{V4} Let \(W\) be the set of all \(\IR^3\) vectors
+\(\begin{bmatrix} x \\ y \\ z \end{bmatrix}\) satisfying \(x+y+z=0\) (this forms a plane).
+Determine if \(W\) is a subspace of \(\IR^3\).
 \end{problem}
 \begin{solution}
-It is closed under addition and scalar multiplication, so it is a subspace.  Alternatively, it is the image of the linear transformation from $\IR^3 \rightarrow \IR^4$ given by $$\begin{bmatrix} x \\ y \\ z \end{bmatrix} \mapsto  \begin{bmatrix} x \\ y \\ 0 \\ z \end{bmatrix}.$$
+Yes, because \(z=-x-y\) and
+\(
+  a\begin{bmatrix} x_1 \\ y_1 \\ -x_1-y_1 \end{bmatrix}+
+  b\begin{bmatrix} x_2 \\ y_2 \\ -x_2-y_2 \end{bmatrix}=
+  \begin{bmatrix}
+    ax_1+bx_2 \\
+    ay_1+by_2 \\
+    -(ax_1+bx_2)-(ay_1+by_2)
+  \end{bmatrix}
+\).
+Alternately, yes because \(W\) is isomorphic to \(\IR^2\).
 \end{solution}
 
 
 \begin{extract}\newpage\end{extract}
 \begin{problem}{S1}
-Determine if the set of vectors $\left\{ \begin{bmatrix} -3 \\ 8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\}$ is  linearly dependent or linearly independent
+Determine if the set of vectors $\left\{ \begin{bmatrix} -3 \\ -8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\}$ is  linearly dependent or linearly independent
 \end{problem}
 \begin{solution}
-$$\RREF\left( \begin{bmatrix}-3 & 1 & 0 \\ 8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & 0 \\ 0 & 1 & 0 \\ 0 & 0 & 1 \end{bmatrix}$$
-Every column is a pivot column, therefore the set is linearly independent.
+$$\RREF\left( \begin{bmatrix}-3 & 1 & 0 \\ -8 & 2 & -1 \\ 0 & 2 & 3 \end{bmatrix}\right) = \begin{bmatrix} 1 & 0 & \frac{1}{2} \\ 0 & 1 & \frac{3}{2} \\ 0 & 0 & 0 \end{bmatrix}$$ 
+This has a non pivot column, therefore the set is linearly dependent.
 \end{solution}
 
 \begin{problem}{S2}
-Determine if the set $\left\{ \begin{bmatrix} 0 \\ 1 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 1 \\ -1 \\ 0 \\ 2 \end{bmatrix}, \begin{bmatrix} 1 \\ 0 \\ -1 \\ 0 \end{bmatrix}, \begin{bmatrix}0 \\ 2 \\ 0 \\ -1 \end{bmatrix} \right\}$ is a basis of $\IR^4$.
+Determine if the set $\left\{ x^2+x-1, 3x^2-x+1, 2x^2-2 \right\}$ is a basis of $\P^2$.
 \end{problem}
 \begin{solution}
-$$\RREF\left(\begin{bmatrix} 0 & 1 & 1 & 0 \\ 1 & -1 & 0 & 2   \\ 1 & 0 & -1 & 0  \\ 1 & 2 & 0 & -1  \end{bmatrix} \right) = \begin{bmatrix} 1 & 0 & 0 & 1  \\ 0 & 1 & 0 & -1  \\ 0 & 0 & 1 & 1  \\ 0 & 0 & 0 & 0 \end{bmatrix} $$
-Since this is not the identity matrix, the set is not a basis.
+$$\RREF\left(\begin{bmatrix} 1 & 3 & 2 \\ 1 & -1 & 0 \\ -1 & 1 & -2 \end{bmatrix} \right)= \begin{bmatrix} 1 & 0 &0 \\ 0 & 1 & 0 \\ 0 & 0 & 1\end{bmatrix}$$
+Since the resulting matrix is the identity matrix, it is a basis.
 \end{solution}
-
 
 
 \begin{extract}\newpage\end{extract}
@@ -221,22 +261,12 @@ Thus \(\left\{
 
 
 \begin{problem}{S4}
-  Let \(
-    W={\rm span}\left\{ 2x^2-x+3, 2x^2+2, -x^2+4x+1 \right\}\).
-  Find the dimension of \(W\).
+Let $W={\rm span}\left(\left\{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}, \begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix}1 \\ 2 \\ 0 \\ 1 \end{bmatrix}\right\}\right)$. Compute the dimension of $W$.
 \end{problem}
 \begin{solution}
-  \[\RREF\left(
-    \begin{bmatrix}
-      2 & 2 & -1 \\
-      -1 & 0 & 4 \\
-      3 & 2 & 1
-    \end{bmatrix} \right)= \begin{bmatrix}
-      1 & 0 &0 \\
-      0 & 1 & 0 \\
-      0 & 0 & 1
-    \end{bmatrix}
-  \]
-  Since it has three pivot columns, its dimension is \(3\).
+$$\RREF\left( \begin{bmatrix} 2 & 3 & 0 & 1 \\ 0 & 1 & 0 & 2 \\ -2 & 3 & 1 & 0 \\ 0 & 6 & 1 & 1\end{bmatrix} \right) = \begin{bmatrix}1 & 0 & 0 & -\frac{5}{2} \\ 0 & 1 & 0 & 2 \\ 0 & 0 & 1 & -11\\ 0 & 0 & 0 & 0  \end{bmatrix} $$
+This has 3 pivot columns so  $\dim(W) =3$.
 \end{solution}
+
+
 \end{document}
