--- a/assessments/clontz/midterm-v5.tex
+++ b/assessments/clontz/midterm-v5.tex
@@ -2,7 +2,7 @@
 %% This is file, `midterm-v5.tex',
 %% generated with the extract package.
 %% 
-%% Generated on :  2017/10/06,13:50
+%% Generated on :  2017/10/02,14:54
 %% From source  :  midterm-v5_solutions.tex
 %% Using options:  active,generate=midterm-v5,extract-env={problem}
 %% 
@@ -17,9 +17,9 @@
 \begin{problem}{E1}
 Write an augmented matrix corresponding to the following system of linear equations.
 \begin{align*}
-x+3y-4z &= 5 \\
-3x+9y+z &= 0 \\
-x-z &= 1
+x_1+3x_2-4x_3 +x_4 &= 5 \\
+3x_1+9x_2+x_3-7x_4 &= 0 \\
+x_1-x_3 +x_4 &= 1
 \end{align*}
 \end{problem}
 
@@ -27,29 +27,30 @@ x-z &= 1
 Find \(\RREF A\), where
 \[
   A =
-  \begin{bmatrix}[ccc|c]
-    2 & -1 & 5 & 4 \\
-    -1 & 0 & -2 & -1 \\
-    1 & 3 & -1 & -5
+  \begin{bmatrix}[cccc|c]
+    3 & -2 & 1 & 8 & -5 \\
+    2 & 2 & 0 & 6 & -2 \\
+    -1 & 1 & 1 & -4 & 6 \\
   \end{bmatrix}
 \]
 \end{problem}
 \newpage
 
 \begin{problem}{E3}
-Find the solution set for the following system of linear equations.
+Solve the system of linear equations.
 \begin{align*}
-2x_1-2x_2+6x_3-x_4 &=-1 \\
-3x_1+6x_3+x_4 &= 5 \\
--4x_1+x_2-9x_3+2x_4&=-7
+2x+y-z+w &=5 \\
+3x-y-2w &= 0 \\
+-x+5z+3w&=-1
 \end{align*}
 \end{problem}
 
 \begin{problem}{E4}
-Find a basis for the solution set to the homogeneous system of equations
+Find a basis for the solution set of the system of equations
 \begin{align*}
-2x_1+3x_2-5x_3+14x_4 &= 0\\
-x_1+x_2-x_3+5x_4 &= 0
+x+2y+3z+w &= 0 \\
+3x-y+z+w &= 0 \\
+2x-3y-2z &= 0
 \end{align*}
 \end{problem}
 \newpage
@@ -73,7 +74,15 @@ Determine if $\begin{bmatrix} 0 \\ 1 \\ -2 \\ 1 \end{bmatrix}$ can be written as
 \newpage
 
 \begin{problem}{V3}
-Determine if the vectors $\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}$, $\begin{bmatrix} 3 \\ 1 \\ 3 \\ 6 \end{bmatrix}$, $\begin{bmatrix} 0 \\ 0 \\ 1 \\ 1 \end{bmatrix}$, and $\begin{bmatrix}1 \\ 2 \\ 0 \\ 1 \end{bmatrix}$ span $\IR^4$.
+Does
+\(
+  \operatorname{span}\left\{
+    \begin{bmatrix} 2 \\ -1 \\ 4 \end{bmatrix},
+    \begin{bmatrix} 3 \\ 12 \\ -9 \end{bmatrix},
+    \begin{bmatrix} 1 \\ 2 \\ 3 \end{bmatrix},
+    \begin{bmatrix} -4 \\ 2 \\ -8 \end{bmatrix}
+  \right\} = \IR^3
+\)?
 \end{problem}
 
 \begin{problem}{V4} Let \(W\) be the set of all \(\IR^3\) vectors
@@ -83,7 +92,7 @@ Determine if \(W\) is a subspace of \(\IR^3\).
 \newpage
 
 \begin{problem}{S1}
-Determine if the set of vectors $\left\{ \begin{bmatrix} -3 \\ 8 \\ 0 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ 2 \end{bmatrix}, \begin{bmatrix} 0 \\ -1 \\ 3 \end{bmatrix} \right\}$ is  linearly dependent or linearly independent
+Determine if the set of vectors  $\left\{\begin{bmatrix} 1 \\ 0 \\ 1 \end{bmatrix}, \begin{bmatrix} 1 \\ 2 \\ -1 \end{bmatrix}, \begin{bmatrix} 1 \\ 3 \\ -2 \end{bmatrix}\right\}$ is  linearly dependent or linearly independent
 \end{problem}
 
 \begin{problem}{S2}
@@ -101,7 +110,7 @@ Let $W={\rm span}\left(\left\{\begin{bmatrix} 2 \\ 0 \\ -2 \\ 0 \end{bmatrix}, \
 \end{problem}
 
 \begin{problem}{S4}
-Let $W={\rm span}\left( \left\{ \begin{bmatrix} 1 \\ -1 \\ 3 \\ -3 \end{bmatrix},\begin{bmatrix} 2 \\ 0 \\ 1 \\ 1 \end{bmatrix}, \begin{bmatrix} 3 \\ -1 \\ 4 \\ -2 \end{bmatrix},  \begin{bmatrix} 1 \\ 1 \\ 1 \\ -7 \end{bmatrix} \right\}\right)$.  Compute the dimension of $W$.
+Let $W$ be the subspace of $\P_3$ given by $W={\rm span}\left( \left\{ x^3-x^2+3x-3, 2x^3+x+1, 3x^3-x^2+4x-2, x^3+x^2+x-7\right\}\right)$.  Compute the dimension of $W$.
 \end{problem}
 
 \end{document}
